--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,5 +1,8 @@
 @import './base/base.scss';
 @import '~@entur/component-library/lib/index.css';
+@import '~@entur/layout/dist/styles.css';
+@import '~@entur/form/dist/styles.css';
+@import '~@entur/typography/dist/styles.css';
 
 .hidden {
     opacity: 0.0;
