--- a/src/style/index.css
+++ b/src/style/index.css
@@ -29,16 +29,12 @@
     width: 250px;
 }
 
-#logout:hover #logout {
-    display: block;
-}
-
 h6 {
     border-bottom: 4px solid currentColor;
     border-bottom-color: #ff5959;
 }
 
-#background {
+.background-image {
     min-height: 100%;
     min-width: 1024px;
     width: 100%;
@@ -46,10 +42,6 @@ h6 {
     position: fixed;
     top: 0;
     left: 0;
-}
-
-#message {
-    top: -5px;
 }
 
 input, Select, select.option, span {
@@ -62,7 +54,6 @@ input, Select, select.option, span {
     top: 130px;
     background-color: rgba(23,28,86,0.9);
     min-width: 55%;
-    max-width: 55%;
     min-height: 40;
     padding: 3%;
     padding-bottom: 5%;
@@ -73,27 +64,15 @@ input, Select, select.option, span {
     width: 300px;
 }
 
-#overview {
-    top: 130px;
-    left: 22.5%;
-    min-width: 55%;
-    max-width: 55%;
-}
-
 .date-form {
     max-width: 50%;
 }
 
 @media only screen and (min-width: 1300px) {
-    #overview {
-        top: 120px;
-    }
-
     .register_box {
         position: absolute;
         top: 160px;
     }
-
 }
 
 @media only screen and (max-width: 991px) {
@@ -114,13 +93,6 @@ input, Select, select.option, span {
 
     .select-organization {
         top: 90px;
-    }
-
-    #overview {
-        min-width: 100%;
-        left: 0;
-        top: 150px;
-        right: 0;
     }
 }
 
