--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,6 +3,7 @@
 @import '~@entur/layout/dist/styles.css';
 @import '~@entur/form/dist/styles.css';
 @import '~@entur/typography/dist/styles.css';
+@import '~@entur/icons/dist/styles.css';
 
 .hidden {
     opacity: 0.0;
