--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,98 +6,101 @@
 @import '~@entur/icons/dist/styles.css';
 
 .hidden {
-    opacity: 0.0;
+  opacity: 0;
 }
 .navBar {
-    background-color: #181c56;
-    position: absolute;
-    height: 100px;
-    width: 100%;
-    top: 0px;
+  background-color: #181c56;
+  position: absolute;
+  height: 100px;
+  width: 100%;
+  top: 0px;
 }
 
 .logout {
-    position: absolute;
-    top: 25px;
-    right: 20px;
-    padding: 15px;
+  position: absolute;
+  top: 25px;
+  right: 20px;
+  padding: 15px;
 }
 
-.select-organization{
-    position: absolute;
-    top: 30px;
-    left: calc(50% - 125px);
-    width: 250px;
+.select-organization {
+  position: absolute;
+  top: 30px;
+  left: calc(50% - 125px);
+  width: 250px;
 }
 
 h6 {
-    border-bottom: 4px solid currentColor;
-    border-bottom-color: #ff5959;
+  border-bottom: 4px solid currentColor;
+  border-bottom-color: #ff5959;
 }
 
 .background-image {
-    min-height: 100%;
-    min-width: 1024px;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
-input, Select, select.option, span {
-    text-align: center;
+input,
+select,
+select.option,
+span {
+  text-align: center;
 }
 
 .register_box {
-    position: absolute;
-    left: 22.5%;
-    top: 130px;
-    background-color: rgba(23,28,86,0.9);
-    min-width: 55%;
-    min-height: 40;
-    padding: 3%;
-    padding-bottom: 5%;
-    margin-bottom: 100px;
+  position: absolute;
+  left: 22.5%;
+  top: 130px;
+  background-color: rgba(23, 28, 86, 0.9);
+  min-width: 55%;
+  min-height: 40;
+  padding: 3%;
+  padding-bottom: 5%;
+  margin-bottom: 100px;
 }
 
 .searchField {
-    width: 300px;
+  width: 300px;
 }
 
 .date-form {
-    max-width: 50%;
+  max-width: 50%;
 }
 
 @media only screen and (min-width: 1300px) {
-    .register_box {
-        position: absolute;
-        top: 160px;
-    }
+  .register_box {
+    position: absolute;
+    top: 160px;
+  }
 }
 
 @media only screen and (max-width: 991px) {
-    .register_box {
-        min-width: 100%;
-        max-width: 100%;
-        min-height: calc(100% - 100px);
-        background-color: rgba(23,28,86,0.7);
-        left: 0;
-        top: 150px;
-        right: 0;
-        margin-bottom: 0px;
-    }
+  .register_box {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: calc(100% - 100px);
+    background-color: rgba(23, 28, 86, 0.7);
+    left: 0;
+    top: 150px;
+    right: 0;
+    margin-bottom: 0px;
+  }
 
-    .navBar {
-        height: 150px;
-    }
+  .navBar {
+    height: 150px;
+  }
 
-    .select-organization {
-        top: 90px;
-    }
+  .select-organization {
+    top: 90px;
+  }
 }
 
 .padding {
-    top: 50%;
-    padding: 20px;
+  top: 50%;
+  padding: 20px;
 }
