--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,6 +4,8 @@
 @import '~@entur/form/dist/styles.css';
 @import '~@entur/typography/dist/styles.css';
 @import '~@entur/icons/dist/styles.css';
+@import '~@entur/button/dist/styles.css';
+@import '~@entur/datepicker/dist/styles.css';
 
 .hidden {
   opacity: 0;
