--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,6 +6,7 @@
 @import '~@entur/icons/dist/styles.css';
 @import '~@entur/button/dist/styles.css';
 @import '~@entur/datepicker/dist/styles.css';
+@import '~@entur/tooltip/dist/styles.css';
 
 .hidden {
   opacity: 0;
