--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,6 +7,7 @@
 @import '~@entur/button/dist/styles.css';
 @import '~@entur/datepicker/dist/styles.css';
 @import '~@entur/tooltip/dist/styles.css';
+@import '~@entur/loader/dist/styles.css';
 
 .hidden {
   opacity: 0;
