--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,6 +7,7 @@
 @import '~@entur/tooltip/dist/styles.css';
 @import '~@entur/loader/dist/styles.css';
 @import '~@entur/tab/dist/styles.css';
+@import '@entur/alert/dist/styles.css';
 
 .hidden {
   opacity: 0;
@@ -61,6 +62,7 @@ span {
   top: 130px;
   background-color: rgba(23, 28, 86, 1);
   min-width: 55%;
+  max-width:65%;
   min-height: 40;
   padding: 3%;
   padding-bottom: 5%;
@@ -85,7 +87,7 @@ span {
 @media only screen and (max-width: 991px) {
   .register_box {
     min-width: 100%;
-    max-width: 100%;
+    max-width: 80%;
     min-height: calc(100% - 100px);
     background-color: rgba(23, 28, 86, 0.7);
     left: 0;
