--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,6 +11,9 @@
 @import '~@entur/a11y/dist/styles.css';
 @import '~@entur/expand/dist/styles.css';
 @import '~@entur/modal/dist/styles.css';
+@import '~@entur/table/dist/styles.css';
+@import '~@entur/dropdown/dist/styles.css';
+@import '~@entur/chip/dist/styles.css';
 
 .hidden {
   opacity: 0;
