style: improve form control spacing
Add margin between form controls and set minimum height for textareas to improve readability and user experience

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -62,6 +62,15 @@ span {
   text-align: left;
 }
 
+.form-control {
+  margin-bottom: 1rem;
+}
+
+textarea.form-control {
+  margin-bottom: 1rem;
+  min-height: 100px;
+}
+
 .register_box {
   position: absolute;
   left: 22.5%;
